--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
           <h2 class="section-features-title visually-hidden">Our Features</h2>
           <ul class="section-feature-list list">
             <li class="section-features-item">
+              <div class="container-features-icon">
+                <svg class="features-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">Strategy</h3>
               <p class="feature-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -90,6 +95,9 @@
               </p>
             </li>
             <li class="section-features-item">
+              <svg class="features-icons" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="features-item-title">Punctuality</h3>
               <p class="feature-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -97,6 +105,9 @@
               </p>
             </li>
             <li class="section-features-item">
+              <svg class="features-icons" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="features-item-title">Diligence</h3>
               <p class="feature-item-text">
                 Research and confirm brands that present the strongest digital
@@ -104,6 +115,9 @@
               </p>
             </li>
             <li class="section-features-item">
+              <svg class="features-icons" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="features-item-title">Technologies</h3>
               <p class="feature-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -204,6 +218,69 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Clients -->
+      <section class="section section-clients">
+        <div class="container container-clients">
+          <h2 class="section-clients-title">Customers</h2>
+          <ul class="clients-list list">
+            <li class="section-clients-item">
+              <a class="section-clients-link" href="" aria-label="YA&CO">
+                <svg class="clients-icon" weight="104" height="56">
+                  <use href="./images/icons.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-item">
+              <a
+                class="section-clients-link"
+                href=""
+                aria-label="Company Tagline Here"
+              >
+                <svg class="clients-icon" weight="104" height="56">
+                  <use href="./images/icons.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-item">
+              <a class="section-clients-link" href="" aria-label="Company">
+                <svg class="clients-icon" weight="104" height="56">
+                  <use href="./images/icons.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-item">
+              <a
+                class="section-clients-link"
+                href=""
+                aria-label="Foster Peters"
+              >
+                <svg class="clients-icon" weight="104" height="56">
+                  <use href="./images/icons.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-item">
+              <a class="section-clients-link" href="" aria-label="Brand">
+                <svg class="clients-icon" weight="104" height="56">
+                  <use href="./images/icons.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="section-clients-item">
+              <a
+                class="section-clients-link"
+                href=""
+                aria-label="Company Tag Line"
+              >
+                <svg class="clients-icon" weight="104" height="56">
+                  <use href="./images/icons.svg#icon-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
