made team icons

--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
               </p>
             </li>
             <li class="section-features-item">
-              <svg class="features-icons" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="container-features-icon">
+                <svg class="features-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">Punctuality</h3>
               <p class="feature-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -105,9 +107,11 @@
               </p>
             </li>
             <li class="section-features-item">
-              <svg class="features-icons" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="container-features-icon">
+                <svg class="features-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">Diligence</h3>
               <p class="feature-item-text">
                 Research and confirm brands that present the strongest digital
@@ -115,9 +119,11 @@
               </p>
             </li>
             <li class="section-features-item">
-              <svg class="features-icons" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="container-features-icon">
+                <svg class="features-icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">Technologies</h3>
               <p class="feature-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -164,7 +170,7 @@
       </section>
       <!-- Team section -->
       <section class="section team">
-        <div class="container">
+        <div class="container container-section-team">
           <h2 class="section-team-title">Our Team</h2>
           <ul class="section-team-list list">
             <li class="section-team-item">
@@ -178,6 +184,52 @@
               <div class="team-content">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-network-list list">
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.instagram.com/"
+                      aria-label="Mark Guerrero Instagram"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://twitter.com/"
+                      aria-label="Mark Guerrero Twitter"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.facebook.com/"
+                      aria-label="Mark Guerrero Facebook"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.linkedin.com/"
+                      aria-label="Mark Guerrero Linkedin"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item">
