--- a/index.html
+++ b/index.html
@@ -243,6 +243,52 @@
               <div class="team-content">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="team-network-list list">
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.instagram.com/"
+                      aria-label="Tom Ford Instagram"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://twitter.com/"
+                      aria-label="Tom Ford Twitter"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.facebook.com/"
+                      aria-label="Tom Ford Facebook"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.linkedin.com/"
+                      aria-label="Tom Ford Linkedin"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item">
@@ -256,6 +302,52 @@
               <div class="team-content">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="team-network-list list">
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.instagram.com/"
+                      aria-label="Camila Garcia Instagram"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://twitter.com/"
+                      aria-label="Camila Garcia Twitter"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.facebook.com/"
+                      aria-label="Camila Garcia Facebook"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.linkedin.com/"
+                      aria-label="Camila Garcia Linkedin"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item">
@@ -269,6 +361,52 @@
               <div class="team-content">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-network-list list">
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.instagram.com/"
+                      aria-label="Daniel Wilson Instagram"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://twitter.com/"
+                      aria-label="Daniel Wilson Twitter"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.facebook.com/"
+                      aria-label="Daniel Wilson Facebook"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-network-item">
+                    <a
+                      class="team-network-link"
+                      href="https://www.linkedin.com/"
+                      aria-label="Daniel Wilson Linkedin"
+                    >
+                      <svg class="team-network-icon" weight="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -341,15 +479,65 @@
     <!-- Footer section -->
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo link" href="./index.html">
-          Web<span class="logo-white">Studio</span></a
-        >
-
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container container-footer">
+        <div class="container-footer-logo">
+          <a class="footer-logo link" href="./index.html">
+            Web<span class="logo-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-social-media">
+          <p class="social-media-title">Social Media</p>
+          <ul class="social-media-list list">
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://www.instagram.com/"
+                aria-label="Company Instagram"
+              >
+                <svg class="social-media-icon" weight="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://twitter.com/"
+                aria-label="Company Twitter"
+              >
+                <svg class="social-media-icon" weight="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://www.facebook.com/"
+                aria-label="Company Facebook"
+              >
+                <svg class="social-media-icon" weight="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://www.linkedin.com/"
+                aria-label="Company Linkedin"
+              >
+                <svg class="social-media-icon" weight="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
