--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 href="https://www.instagram.com/"
                 aria-label="Company Instagram"
               >
-                <svg class="social-media-icon" weight="24" height="24">
+                <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -509,7 +509,7 @@
                 href="https://twitter.com/"
                 aria-label="Company Twitter"
               >
-                <svg class="social-media-icon" weight="24" height="24">
+                <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -520,7 +520,7 @@
                 href="https://www.facebook.com/"
                 aria-label="Company Facebook"
               >
-                <svg class="social-media-icon" weight="24" height="24">
+                <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -531,7 +531,7 @@
                 href="https://www.linkedin.com/"
                 aria-label="Company Linkedin"
               >
-                <svg class="social-media-icon" weight="24" height="24">
+                <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
