--- a/portfolio.html
+++ b/portfolio.html
@@ -235,15 +235,65 @@
     <!-- Footer section -->
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo link" href="./index.html">
-          Web<span class="logo-white">Studio</span></a
-        >
-
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container container-footer">
+        <div class="container-footer-logo">
+          <a class="footer-logo link" href="./index.html">
+            Web<span class="logo-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-social-media">
+          <p class="social-media-title">Social Media</p>
+          <ul class="social-media-list list">
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://www.instagram.com/"
+                aria-label="Company Instagram"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://twitter.com/"
+                aria-label="Company Twitter"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://www.facebook.com/"
+                aria-label="Company Facebook"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a
+                class="social-media-link"
+                href="https://www.linkedin.com/"
+                aria-label="Company Linkedin"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
