--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </a>
 
           <ul class="header-nav-list list">
-            <li class="header-nav-item">
+            <li class="header-nav-item active">
               <a class="header-nav-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-nav-item">
@@ -540,5 +540,6 @@
         </div>
       </div>
     </footer>
+    <script src="./modal.js"></script>
   </body>
 </html>
