--- a/portfolio.html
+++ b/portfolio.html
@@ -95,13 +95,7 @@
           <ul class="projects-list list">
             <li class="projects-item">
               <div class="container-projects">
-              <div class="overlay">
-                <p>
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              
               <a class="link" href="">
                 <img
                   class="projects-img"
@@ -110,12 +104,20 @@
                   width="360"
                   height="300"
                 />
+                
 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Banking App Interface Concept</h2>
                   <p class="projects-type">App</p>
                 </div>
               </a>
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
             </li>
             <li class="projects-item">
               <a class="link" href="">
