--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </a>
 
           <ul class="header-nav-list list">
-            <li class="header-nav-item active">
+            <li class="header-nav-item">
               <a class="header-nav-link link active" href="./index.html"
                 >Studio</a
               >
@@ -195,7 +195,7 @@
                       href="https://www.instagram.com/"
                       aria-label="Mark Guerrero Instagram"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -206,7 +206,7 @@
                       href="https://twitter.com/"
                       aria-label="Mark Guerrero Twitter"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -217,7 +217,7 @@
                       href="https://www.facebook.com/"
                       aria-label="Mark Guerrero Facebook"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -228,7 +228,7 @@
                       href="https://www.linkedin.com/"
                       aria-label="Mark Guerrero Linkedin"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -424,7 +424,7 @@
           <ul class="clients-list list">
             <li class="section-clients-item">
               <a class="section-clients-link" href="" aria-label="YA&CO">
-                <svg class="clients-icon" weight="104" height="56">
+                <svg class="clients-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo1"></use>
                 </svg>
               </a>
@@ -435,14 +435,14 @@
                 href=""
                 aria-label="Company Tagline Here"
               >
-                <svg class="clients-icon" weight="104" height="56">
+                <svg class="clients-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="section-clients-item">
               <a class="section-clients-link" href="" aria-label="Company">
-                <svg class="clients-icon" weight="104" height="56">
+                <svg class="clients-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo3"></use>
                 </svg>
               </a>
@@ -453,14 +453,14 @@
                 href=""
                 aria-label="Foster Peters"
               >
-                <svg class="clients-icon" weight="104" height="56">
+                <svg class="clients-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="section-clients-item">
               <a class="section-clients-link" href="" aria-label="Brand">
-                <svg class="clients-icon" weight="104" height="56">
+                <svg class="clients-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo5"></use>
                 </svg>
               </a>
@@ -471,7 +471,7 @@
                 href=""
                 aria-label="Company Tag Line"
               >
-                <svg class="clients-icon" weight="104" height="56">
+                <svg class="clients-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo6"></use>
                 </svg>
               </a>
@@ -494,7 +494,7 @@
           </p>
         </div>
         <div class="container-social-media">
-          <p class="social-media-title">Social Media</p>
+          <p class="social-media-title">Social media</p>
           <ul class="social-media-list list">
             <li class="social-media-item">
               <a
