--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
 
           <ul class="projects-list list">
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -104,13 +104,11 @@
                     height="300"
                   />
 
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="container-projects-border">
@@ -121,7 +119,7 @@
             </li>
 
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -130,13 +128,12 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Cashless Payment</h2>
@@ -145,7 +142,7 @@
               </a>
             </li>
             <li class="projects-item list">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -154,13 +151,12 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Meditation App</h2>
@@ -169,7 +165,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -178,13 +174,12 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Taxi Service</h2>
@@ -193,7 +188,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -202,13 +197,12 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Screen Illustrations</h2>
@@ -217,7 +211,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -227,13 +221,11 @@
                     height="300"
                   />
 
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Online Courses</h2>
@@ -242,7 +234,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -251,13 +243,12 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-projects-border">
                   <h2 class="projects-name">Instagram Stories Concept</h2>
@@ -266,7 +257,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -275,13 +266,12 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="container-projects-border">
@@ -291,7 +281,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="link" href="">
+              <a class="link projects-link" href="">
                 <div class="projects-item-img">
                   <img
                     class="projects-img"
@@ -300,14 +290,14 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+
                 <div class="container-projects-border">
                   <h2 class="projects-name">Fresh Coffee</h2>
                   <p class="projects-type">Web Site</p>
@@ -332,7 +322,7 @@
           </p>
         </div>
         <div class="container-social-media">
-          <p class="social-media-title">Social Media</p>
+          <p class="social-media-title">Social media</p>
           <ul class="social-media-list list">
             <li class="social-media-item">
               <a
