--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                       href="https://www.instagram.com/"
                       aria-label="Tom Ford Instagram"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -265,7 +265,7 @@
                       href="https://twitter.com/"
                       aria-label="Tom Ford Twitter"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -276,7 +276,7 @@
                       href="https://www.facebook.com/"
                       aria-label="Tom Ford Facebook"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -287,7 +287,7 @@
                       href="https://www.linkedin.com/"
                       aria-label="Tom Ford Linkedin"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -313,7 +313,7 @@
                       href="https://www.instagram.com/"
                       aria-label="Camila Garcia Instagram"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -324,7 +324,7 @@
                       href="https://twitter.com/"
                       aria-label="Camila Garcia Twitter"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -335,7 +335,7 @@
                       href="https://www.facebook.com/"
                       aria-label="Camila Garcia Facebook"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -346,7 +346,7 @@
                       href="https://www.linkedin.com/"
                       aria-label="Camila Garcia Linkedin"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -372,7 +372,7 @@
                       href="https://www.instagram.com/"
                       aria-label="Daniel Wilson Instagram"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -383,7 +383,7 @@
                       href="https://twitter.com/"
                       aria-label="Daniel Wilson Twitter"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -394,7 +394,7 @@
                       href="https://www.facebook.com/"
                       aria-label="Daniel Wilson Facebook"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -405,7 +405,7 @@
                       href="https://www.linkedin.com/"
                       aria-label="Daniel Wilson Linkedin"
                     >
-                      <svg class="team-network-icon" weight="16" height="16">
+                      <svg class="team-network-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
